# ca-moe

./: .gitignore  Makefile  README.md  pyproject.toml
ca_moe/: __main__.py  baseline_models.py  load_and_preprocess_data.py  my_main.py  train_tools.py
ca_moe/definitions/: constants.py
ca_moe/factories/: model_builder.py  model_factory.py
ca_moe/model/: layers.py  train_tools.py
ca_moe/model/activations/: __init__.py
ca_moe/model/constraints/: __init__.py  constraints.py
ca_moe/model/initializers/: __init__.py  initializers.py
ca_moe/model/layers/: __init__.py  arguments.py  keras_mixins.py  torch_conv2d.py  torch_dense.py
ca_moe/model/regularizers/: __init__.py  regularizer.py
ca_moe/model/tf/: baseline_models.py
ca_moe/utils/: callbacks.py  tools.py
data/conf/: config.yaml  settings.yaml
data/conf/backend/: keras.yaml  tensorflow.yaml  torch.yaml
data/conf/dataset/: mnist.yaml
data/conf/hydra/job_logging/: custom.yaml
data/conf/model/: lenet5.yaml  linear.yaml  nn.yaml
data/conf/model/layers/: dense.yaml
docs/: cost_aware_deep_learning.MD
tests/: regularizers.py
